--- a/style.css
+++ b/style.css
@@ -104,6 +104,16 @@ section p {
   line-height: 1.6;
 }
 
+
+section iframe {
+  font-size: 16px;
+  color: #444;
+  line-height: 1.6;
+}
+
+
+
+
 /* Card Grid (Products & Services) */
 .projects {
   display: grid;
